; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/server/extr_sv_rankings.c_SV_RankCloseContext.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/server/extr_sv_rankings.c_SV_RankCloseContext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i8*, i32, i32, i32, i64, i64 }

@s_server_context = common dso_local global i64 0, align 8
@s_server_match = common dso_local global i64 0, align 8
@s_ranked_players = common dso_local global i32* null, align 8
@QGR_STATUS_NEW = common dso_local global i32 0, align 4
@s_rankings_contexts = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [47 x i8] c"SV_RankCloseContext: s_rankings_contexts = %d\0A\00", align 1
@GRLOG_OFF = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@s_rankings_active = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"sv_rankingsActive\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"0\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @SV_RankCloseContext to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SV_RankCloseContext(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = icmp eq %struct.TYPE_3__* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i64, i64* @s_server_context, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %5
  br label %65

9:                                                ; preds = %5
  store i64 0, i64* @s_server_context, align 8
  store i64 0, i64* @s_server_match, align 8
  br label %43

10:                                               ; preds = %1
  %11 = load i32*, i32** @s_ranked_players, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  br label %65

14:                                               ; preds = %10
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  br label %65

20:                                               ; preds = %14
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i64 0, i64* %22, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 6
  store i64 0, i64* %24, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 5
  store i64 0, i64* %26, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 4
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @memset(i32 %29, i32 0, i32 4)
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 3
  store i32 %33, i32* %35, align 4
  %36 = load i32, i32* @QGR_STATUS_NEW, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 2
  store i32 %36, i32* %38, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i8*, i8** %40, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 0
  store i8 0, i8* %42, align 1
  br label %43

43:                                               ; preds = %20, %9
  %44 = load i64, i64* @s_rankings_contexts, align 8
  %45 = icmp sgt i64 %44, 0
  %46 = zext i1 %45 to i32
  %47 = call i32 @assert(i32 %46)
  %48 = load i64, i64* @s_rankings_contexts, align 8
  %49 = add nsw i64 %48, -1
  store i64 %49, i64* @s_rankings_contexts, align 8
  %50 = load i64, i64* @s_rankings_contexts, align 8
  %51 = call i32 @Com_DPrintf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i64 %50)
  %52 = load i64, i64* @s_rankings_contexts, align 8
  %53 = icmp eq i64 %52, 0
  br i1 %53, label %54, label %65

54:                                               ; preds = %43
  %55 = load i32, i32* @GRLOG_OFF, align 4
  %56 = call i32 @GRankLogLevel(i32 %55)
  %57 = load i32*, i32** @s_ranked_players, align 8
  %58 = icmp ne i32* %57, null
  br i1 %58, label %59, label %62

59:                                               ; preds = %54
  %60 = load i32*, i32** @s_ranked_players, align 8
  %61 = call i32 @Z_Free(i32* %60)
  store i32* null, i32** @s_ranked_players, align 8
  br label %62

62:                                               ; preds = %59, %54
  %63 = load i32, i32* @qfalse, align 4
  store i32 %63, i32* @s_rankings_active, align 4
  %64 = call i32 @Cvar_Set(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  br label %65

65:                                               ; preds = %8, %13, %19, %62, %43
  ret void
}

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @Com_DPrintf(i8*, i64) #1

declare dso_local i32 @GRankLogLevel(i32) #1

declare dso_local i32 @Z_Free(i32*) #1

declare dso_local i32 @Cvar_Set(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
